-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 200201) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][devT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v1.8.2r14 <*-

??022001 (v1.9dev3)
	- changed: -Md syntax to '-Md:rawmidi,device_name', where
		   'rawmidi' specifies the type while 'device_name' 
	  	   refers to a file/device name
	- fixed: MIDI-thread hang when exiting ecasound 
	- fixed: various ewf-related fixes
14022001 (v1.9dev2)
	- added: -z:nointbuf - minimize the use of internal buffering
	         done by rt-devices
	- added: -z:xruns - stop processing if an xrun occurs
	- added: '--disable-ncurses' configure switch; ncurses/termcap
		 is still required during compiling, but with this,
		 ncurses/termcap is ignored during linking
	- added: -Md:device option for specifying MIDI-devices
	- added: -Mms:device_id; send MMC start/stop to MIDI devices
	- added: -Mss; send MIDI-start/stop (note! MIDI-clock is 
		 not sent)
	- added: support for ALSA 0.6.x named pcm-devices; the new
		 syntax is '-[io]:alsa,pcm_name'; alternatively, 
	         '-[io]:alsahw,card,dev,subdev' and '-[io]:alsaplugin,
		 c,d,sd' can also be used; doesn't affect 0.5.x and 
	         older ALSA plugins
	- added: eiam-cmds; cs-is-valid
	- changed: support for -z:nointbuf to OSS-devices (/dev/dsp)
		   and ALSA 0.5.x plugin
	- fixed: severe bugs with -km (midi-routines)
07022001 (v1.9dev1)