@@ -159,7 +159,7 @@ Kai Vehmanen -	mailto:kaiv@wakkanet.fi
  Contributors / credits / thanks to 
 -----------------------------------------------------------------------
 
-Barton-Davis, Paul - Has probably written more Linux audio related code (and mails) than anyone else! :)
+Davis, Paul - Has probably written more Linux audio related code (and mails) than anyone else! :)
 Beaupre, Antoine - Patches for FreeBSD compatibility. [beaupran]
 Campbell, Ross - Tips concerning Solaris. [rcampbel]
 Coker, Rob - Pulse gate (-eemp) code. [rcs]
